Fixed an issue where the window looks wrong on mobile devices

--- a/public/global.css
+++ b/public/global.css
@@ -148,6 +148,7 @@ input[type="radio"] {
   max-width: 1100px;
   padding: 0 12px;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .card {
